# mcp-chat

./: .env.example  .gitignore  Cargo.toml  README.md
src/: auth.rs  bridge.rs  chat.rs  lib.rs  main.rs  mcp.rs  sessionlog.rs  ui.rs
